<resources>
    <string name="app_name">Take &amp; Wash</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_connexion">Take &amp; Wash</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_menu_admin">Menu Admin</string>
    <string name="title_activity_mon_compte">Mon compte</string>
    <string name="title_activity_commande">Passer commande</string>
    <string name="title_activity_mes_commandes">mesCommandes</string>
    <string name="title_activity_admin_clients">Clients</string>
    <string name="button_admin_commande">Commandes</string>
    <string name="button_admin_clients">Clients</string>
    <string name="button_admin_planning">Planning</string>
    <string name="button_admin_services">Services/prix/offres</string>
    <string name="button_admin_points_retraits">Points de retrait</string>
    <string name="button_admin_tableau_de_bord">Tableau de bord</string>
    <string name="err">Erreur</string>
    <string name="button_mon_compte">Mon compte</string>
    <string name="deco">Déconnexion</string>
    <string name="login">Login :</string>
    <string name="passwd">Mot de passe :</string>
    <string name="addr">Adresse :</string>
    <string name="name">Nom :</string>
    <string name="adress">Adresse : </string>
    <string name="url">http://51.254.167.75/v1/</string>
    <string name="urlUser">userdb/</string>
    <string name="urlLogin">secure/onlylogged</string>
    <string name="urlCommand">commanddb/</string>

</resources>
