<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.univ_lille1.iut_info.pohlem.projetagiles4android.menu_admin">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_admin_commande"
        android:id="@+id/commandes"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="voirCommandes" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_admin_clients"
        android:id="@+id/clients"
        android:layout_below="@+id/commandes"
        android:layout_centerHorizontal="true"
        android:onClick="voirClients" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_admin_planning"
        android:id="@+id/planning"
        android:layout_below="@+id/clients"
        android:layout_centerHorizontal="true"
        android:onClick="voirPlanning" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_admin_services"
        android:id="@+id/services"
        android:layout_below="@+id/planning"
        android:layout_centerHorizontal="true"
        android:onClick="voirServices" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_admin_points_retraits"
        android:id="@+id/pointsRetraits"
        android:layout_below="@+id/services"
        android:layout_centerHorizontal="true"
        android:onClick="VoirPointsRetraits" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_admin_tableau_de_bord"
        android:id="@+id/tableauDeBord"
        android:layout_below="@+id/pointsRetraits"
        android:layout_centerHorizontal="true"
        android:onClick="voirTableauBord" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_mon_compte"
        android:id="@+id/compte"
        android:onClick="voirCompte"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deco"
        android:id="@+id/button_deco"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
